force-app/main/default/objects/Encryption_Key__mdt/Encryption_Key__mdt.object-meta.xml
<CustomObject>
    <label>Encryption Key</label>
    <pluralLabel>Encryption Keys</pluralLabel>
</CustomObject>