force-app/main/default/objects/Encryption_Key__mdt/fields/Algorithm__c.field-meta.xml
<CustomField>
    <fullName>Algorithm__c</fullName>
    <label>Algorithm</label>
    <type>Text</type>
    <length>50</length>
</CustomField>