force-app/main/default/objects/Encryption_Key__mdt/fields/Key_Value__c.field-meta.xml
<CustomField>
    <fullName>Key_Value__c</fullName>
    <label>Key Value</label>
    <type>Text</type>
    <length>255</length>
</CustomField>