force-app/main/default/objects/Encryption_Key__mdt/fields/Key_Version__c.field-meta.xml
<CustomField>
    <fullName>Key_Version__c</fullName>
    <label>Key Version</label>
    <type>Text</type>
    <length>10</length>
</CustomField>