force-app/main/default/objects/Encryption_Key__mdt/fields/Public_Key_PEM__c.field-meta.xml
<CustomField>
    <fullName>Public_Key_PEM__c</fullName>
    <label>Public Key PEM</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>